Fix for h2 overflow on small screens, minor adjhustments to header

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -135,11 +135,11 @@ a {
     display: table;
     width: 100%;
     height: 100%;
-    padding-top: 70px;
+    padding-top: 55px;
     text-align: center;
 //	text-shadow: 0px 0px 2px #fff;
     background: url(../img/main.jpg) no-repeat bottom center scroll;
-    background-color: black;
+    background-color: white;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -148,7 +148,7 @@ a {
         display: table-cell;
         vertical-align: top;
         .brand-heading {
-            font-size: 28px;
+            font-size: 22px;
 			font-weight: 300;
 			margin-bottom: 0;
         }
@@ -210,6 +210,14 @@ a {
 		color: white;
 		text-decoration: underline;
 	}
+	h2 {
+		font-size: 26px;
+	}
+    @media(min-width:768px) {
+     	h2 {
+     		font-size: inherit;
+     	}
+    }
 }
 
 .background-section {
